welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: value poseBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value poseBiscuit'?
  }poseBiscuit()
   ^